--- a/views/pages/cap.ejs
+++ b/views/pages/cap.ejs
@@ -2,11 +2,11 @@
 
 <h5>Cap : <span id="cap"></span>°</h5>
 <br>
-<button  class="waves-effect waves-light btn" id="cap_m10" >-10</button>
-<button  class="waves-effect waves-light btn" id="cap_m1"  >-1</button>
-<button  class="waves-effect waves-light btn" id="cap_set" >SET</button>
-<button  class="waves-effect waves-light btn" id="cap_p1"  >+1</button>
-<button  class="waves-effect waves-light btn" id="cap_p10" >+10</button>
+<button  class="waves-effect waves-light btn" id="-10" >-10</button>
+<button  class="waves-effect waves-light btn" id="-1"  >-1</button>
+<button  class="waves-effect waves-light btn" id="set" >SET</button>
+<button  class="waves-effect waves-light btn" id="+1"  >+1</button>
+<button  class="waves-effect waves-light btn" id="+10" >+10</button>
 
 <% include ../partials/footer %>	
 <script type="text/javascript" src="js/cap.js"></script>
