--- a/views/pages/wait.ejs
+++ b/views/pages/wait.ejs
@@ -16,7 +16,7 @@
 
   	<div class="container blue-text text-darken-2 center-align">
 
-      <h5>Attenre de Connexion...</h5>
+      <h5>Attente de Connexion...</h5>
 
 
 	</div>
