--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,6 +20,8 @@
 			<li><a href="magnetometre">		Magnétomètre	</a></li>
 			<li><a href="gyroscope">		Gyroscope		</a></li>
 			<li><a href="asservissement">	Asservisssement	</a></li>
+			<li><a href="power">	        Alimentation   </a></li>
 		</ul>
 		
 		<div class="container blue-text text-darken-2 center-align">
+ 
