--- a/views/pages/power.ejs
+++ b/views/pages/power.ejs
@@ -5,6 +5,9 @@
 <br>
 <br>
 <button  class="waves-effect waves-light btn" id="redemarrer">Redémarrer</button>
+<br>
+<br>
+<button  class="waves-effect waves-light btn" id="reload">Reinitialise</button>
 
  			
 <% include ../partials/footer %>	
