--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,12 +10,13 @@
 		<nav>
 			<div class="nav-wrapper">
 				<a href="/" class="brand-logo">   <%= titre %> </a>
-				<a href="/" data-target="mobile-demo" class="sidenav-trigger"><img src="images/menu.png" height="36" ></a>
+				 <ul class="right">
+					<li><a class="dropdown-trigger" style="width: 150px !important" href="#!" data-target="dropdown1" data-constrainwidth="false">Paramètres</a></li>
+				</ul>
 			</div>
 		</nav>
 
-		<ul class="sidenav" id="mobile-demo">
-			<li><a href="/">Auto Pilote</a></li>
+		<ul id='dropdown1' class='dropdown-content ' >
 			<li><a href="accelerometre">	Accéléromètre	</a></li>
 			<li><a href="magnetometre">		Magnétomètre	</a></li>
 			<li><a href="gyroscope">		Gyroscope		</a></li>
@@ -24,4 +25,3 @@
 		</ul>
 		
 		<div class="container blue-text text-darken-2 center-align">
- 
