--- a/views/pages/cap.ejs
+++ b/views/pages/cap.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
 
-<h5>Cap : <span id="cap"></span>°</h5>
+<h5>Cap : <span id="cap"></span></h5>
 <br>
 <button  class="waves-effect waves-light btn" id="-10" >-10</button>
 <button  class="waves-effect waves-light btn" id="-1"  >-1</button>
