--- a/views/pages/wait.ejs
+++ b/views/pages/wait.ejs
@@ -10,7 +10,7 @@
   <body class="lime lighten-1">
     <nav>
       <div class="nav-wrapper">
-        <a href="/" class="brand-logo">Auto Pilote</a>
+        <a href="/" class="brand-logo center">Auto Pilote</a>
       </div>
     </nav>
 
