--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,19 +9,19 @@
 	<body class="lime lighten-1">
 		<nav>
 			<div class="nav-wrapper">
-				<a href="/" class="brand-logo center">   <%= titre %> </a>
+				<a href="/" class="brand-logo left">   <%= titre %> </a>
 				 <ul class="right">
-					<li><a class="dropdown-trigger" style="width: 150px !important" href="#!" data-target="dropdown1" data-constrainwidth="false">Réglages</a></li>
+					<li><a class="dropdown-trigger" style="text-align: right; width: 120px !important" href="#!" data-target="dropdown1" data-constrainwidth="false">Réglages</a></li>
 				</ul>
 			</div>
 		</nav>
 
 		<ul id='dropdown1' class='dropdown-content ' >
 			<li><a href="/">				Auto Pilote 	</a></li>
-			<li><a href="accelerometre">	Accéléromètre	</a></li>
-			<li><a href="magnetometre">		Magnétomètre	</a></li>
+			<li><a href="accelerometre">	Mouvement   	</a></li>
+			<li><a href="magnetometre">		Compas      	</a></li>
 			<li><a href="gyroscope">		Gyroscope		</a></li>
-			<li><a href="asservissement">	Asservisssement	</a></li>
+			<li><a href="asservissement">	PID				</a></li>
 			<li><a href="power">	        Eteindre        </a></li>
 		</ul>
 		
