--- a/views/pages/power.ejs
+++ b/views/pages/power.ejs
@@ -1,13 +1,19 @@
 <% include ../partials/header %>
 
 <br>
-<button  class="waves-effect waves-light btn" id="eteindre">Eteindre</button>
+<button  class="waves-effect waves-light btn" id="eteindre">Eteindre Pilote</button>
 <br>
 <br>
-<button  class="waves-effect waves-light btn" id="redemarrer">Redémarrer</button>
+<button  class="waves-effect waves-light btn" id="redemarrer">Redémarrer Pilote</button>
 <br>
 <br>
-<button  class="waves-effect waves-light btn" id="reload">Reinitialise</button>
+<button  class="waves-effect waves-light btn" id="reload">Reinitialise service</button>
+<br>
+<br>
+<button  class="waves-effect waves-light btn" id="remote_off">Eteindre télécommmande</button>
+<br>
+<br>
+<button  class="waves-effect waves-light btn" id="remote_reboot">Redémarrer télécommmande</button>
 
  			
 <% include ../partials/footer %>	
