--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,11 @@
+<h6>
+<span id="connexion"></span>
+</h6>
 </div>
     <script type="text/javascript" src="js/materialize.min.js">     </script>
     <script type="text/javascript" src="js/jquery-3.3.1.min.js">    </script>
-    <script type="text/javascript" src="js/connection.js">          </script>
-    <script type="text/javascript" src="js/menu.js">          </script>
+    <script type="text/javascript" src="js/pilote.js">              </script>
+
 </body>
 
 </html>
