--- a/views/pages/power.ejs
+++ b/views/pages/power.ejs
@@ -14,6 +14,9 @@
 <br>
 <br>
 <button  class="waves-effect waves-light btn" id="remote_reboot">Redémarrer télécommmande</button>
+<br>
+<br>
+<button  class="waves-effect waves-light btn" id="terminal">Terminal</button>
 
  			
 <% include ../partials/footer %>	
