--- a/views/pages/power.ejs
+++ b/views/pages/power.ejs
@@ -16,7 +16,7 @@
 <button  class="waves-effect waves-light btn" id="remote_reboot">Redémarrer télécommmande</button>
 <br>
 <br>
-<button  class="waves-effect waves-light btn" id="terminal">Terminal</button>
+<button  class="waves-effect waves-light btn" id="desktop">Mode Bureau</button>
 
  			
 <% include ../partials/footer %>	
