--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,9 +18,8 @@
 
 		<ul id='dropdown1' class='dropdown-content ' >
 			<li><a href="/">				Auto Pilote 	</a></li>
-			<li><a href="accelerometre">	Mouvement   	</a></li>
-			<li><a href="magnetometre">		Compas      	</a></li>
-			<li><a href="gyroscope">		Gyroscope		</a></li>
+			<li><a href="capteur">			Capteur   		</a></li>
+			<li><a href="calibration">		Calibration    	</a></li>
 			<li><a href="asservissement">	PID				</a></li>
 			<li><a href="power">	        Eteindre        </a></li>
 		</ul>
