--- a/views/pages/pid.ejs
+++ b/views/pages/pid.ejs
@@ -18,11 +18,9 @@
     <button  class="waves-effect waves-light btn" id="kd+">+</button>
 </h6>
       
-<hr>
 <p id="rectangle1"></p>
-<hr>
-      
-<button  id="save" class="waves-effect waves-light btn red lighten-2">Sauve</button>
+     
+<button  id="save" class="waves-effect waves-light btn red lighten-2">Sauvegarde</button>
  			
 <% include ../partials/footer %>	
 <script type="text/javascript" src="js/pid.js"></script>
