--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
 	<body class="lime lighten-1">
 		<nav>
 			<div class="nav-wrapper">
-				<a href="/" class="brand-logo left">   <%= titre %> </a>
+				<a href="/" class="brand-logo">   <%= titre %> </a>
 				 <ul class="right">
 					<li><a class="dropdown-trigger" style="text-align: right; width: 120px !important" href="#!" data-target="dropdown1" data-constrainwidth="false">Réglages</a></li>
 				</ul>
