--- a/views/pages/cap.ejs
+++ b/views/pages/cap.ejs
@@ -2,11 +2,14 @@
 
 <h5>Cap : <span id="cap"></span></h5>
 <br>
-<button  class="waves-effect waves-light btn" id="-10" >-10</button>
-<button  class="waves-effect waves-light btn" id="-1"  >-1</button>
-<button  class="waves-effect waves-light btn" id="set" >SET</button>
-<button  class="waves-effect waves-light btn" id="+1"  >+1</button>
-<button  class="waves-effect waves-light btn" id="+10" >+10</button>
-
+<button  class="waves-effect waves-light btn-large" id="-10" >-10</button>
+<button  class="waves-effect waves-light btn-large" id="-1"  >-1</button>
+<button  class="waves-effect waves-light btn-large" id="set" >SET</button>
+<button  class="waves-effect waves-light btn-large" id="+1"  >+1</button>
+<button  class="waves-effect waves-light btn-large" id="+10" >+10</button>
+<br>
+<br>
+<br>
+<button  class="waves-effect waves-light red btn-large" id="pause" >Pause</button>
 <% include ../partials/footer %>	
 <script type="text/javascript" src="js/cap.js"></script>
