--- a/views/pages/cap (copie).ejs
+++ b/views/pages/cap (copie).ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
 
-<h5><span id="cap"></span></h5>
+<h5>Cap : <span id="cap"></span></h5>
 <br>
 <button  class="waves-effect waves-light btn-large" id="-10" >-10</button>
 <button  class="waves-effect waves-light btn-large" id="-1"  >-1</button>
@@ -10,7 +10,6 @@
 <br>
 <br>
 <br>
-  
-<button  class="waves-effect waves-light btn-large" id="stanby" >Pause</button>
+<button  class="waves-effect waves-light red btn-large" id="pause" >Pause</button>
 <% include ../partials/footer %>	
 <script type="text/javascript" src="js/cap.js"></script>
