--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
 		<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 	</head>
 	
-	<body class="lime lighten-1">
+	<body class="grey darken-1">
 		<nav>
 			<div class="nav-wrapper">
 				<a href="/" class="brand-logo">   <%= titre %> </a>
@@ -24,4 +24,4 @@
 			<li><a href="power">	        Eteindre        </a></li>
 		</ul>
 		
-		<div class="container blue-text text-darken-2 center-align">
+		<div class="container white-text center-align">
