--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,6 +18,7 @@
 
 		<ul id='dropdown1' class='dropdown-content ' >
 			<li><a href="/">				Auto Pilote 	</a></li>
+			<li><a href="/heading">			Cap			 	</a></li>
 			<li><a href="capteur">			Capteur   		</a></li>
 			<li><a href="calibration">		Calibration    	</a></li>
 			<li><a href="asservissement">	PID				</a></li>
